--- a/intro.qmd
+++ b/intro.qmd
@@ -2,6 +2,8 @@
 
 Hiiiii
 
+Also hiii to git, this is my book
+
 {{< video https://www.youtube.com/watch?v=8C5xQfOkXMM >}}
 
 This is a book created from markdown and executable code.
